--- a/styles/mdx.css
+++ b/styles/mdx.css
@@ -55,6 +55,20 @@ span[data-rehype-pretty-code-figure]>code::after {
   @apply border-b-2 p-1 shadow-none;
 }
 
+.prose :where(h1):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
+  margin-bottom: 1.3rem !important;
+}
+
+.prose :where(h2):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
+  margin-top: 0.5rem !important;
+  margin-bottom: 0.8rem !important;
+}
+
 .subheading-anchor {
   @apply no-underline hover:underline;
+}
+
+blockquote>p::before,
+blockquote>p::after {
+  display: none;
 }
